--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
     color: white;
     text-decoration: none;
     padding: 12px 20px;
+     margin: 25px;
     font-weight: bold;
     border: 2px solid transparent;
     border-radius: 8px;
