--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
     top: 0;
     z-index: 1000;
     background: linear-gradient(90deg, #0f0c29, #302b63, #24243e);
-    padding: 1px 1;
+    padding: 1px 1px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: space-around;
